# LocalImage

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: fetch-tessdata.ps1  fetch-tessdata.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  img.rs  lib.rs  main.rs
src/components/: BatchModal.tsx  ConvertModal.tsx  EditorView.tsx  HomeView.tsx  OcrModal.tsx  SettingsModal.tsx  TopBar.tsx  ViewerView.tsx  WindowPickModal.tsx
src/lib/: annot.ts  backend.ts  geometry.ts  i18n.ts  ocr.ts  types.ts
src/lib/__tests__/: annot.test.ts  geometry.test.ts  ocr.test.ts  types.test.ts
src/state/: store.ts  ui.ts  view.ts
src/state/__tests__/: view.test.ts
