[package]
name = "localimage"
version = "0.4.0"
description = "LocalImage — visualizador, anotador e captura de tela 100% offline"
authors = ["Taylor"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Anon5T4R/LocalImage"

[lib]
# O sufixo `_lib` evita conflito entre o nome da lib e o do binário no Windows
# (https://github.com/rust-lang/cargo/issues/8519).
name = "localimage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# protocol-asset: o visualizador carrega as imagens direto do disco.
# tray-icon: o app fica residente na bandeja pro atalho global funcionar de janela fechada.
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
# Operações de imagem em Rust puro (decode/resize/convert) — sem sidecar.
image = "0.25"
# EXIF: mostrar metadados e (por construção) removê-los ao exportar.
kamadak-exif = "0.6"
# Excluir = lixeira do SO, nunca delete permanente.
trash = "5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
# Captura de tela multiplataforma. Pinado em 0.4 DE PROPÓSITO: 0.5+ captura
# Wayland via pipewire/libspa, que não compila contra os headers do
# ubuntu-22.04 (runner do release); 0.4 usa dbus/portal + xcb e compila limpo.
xcap = "0.4"
# Atalho global de captura (opt-in nas configurações).
tauri-plugin-global-shortcut = "2"
# Iniciar com o sistema (opt-in) — abre oculto direto na bandeja.
tauri-plugin-autostart = "2"
